# photos

./: .gitignore
backend/: .env.example  .prettierrc  Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma
backend/src/: app.ts  index.ts
backend/src/config/: env.ts  redis.ts  s3.ts
backend/src/controllers/: auth.controller.ts  collections.controller.ts  faces.controller.ts  internal.controller.ts  jobs.controller.ts  media.controller.ts  persons.controller.ts  search.controller.ts  share.controller.ts
backend/src/middleware/: auth.ts  errorHandler.ts  httpLogger.ts  rateLimiter.ts  requestId.ts  serviceAuth.ts  validate.ts
backend/src/routes/: auth.routes.ts  collections.routes.ts  faces.routes.ts  (+7 more)
docs/: plan-auto-sync.md  plan-search-pipeline.md
frontend/: .env.local  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/public/: manifest.json  sw.js
infra/: iam.tf  main.tf  outputs.tf  variables.tf
worker/: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
worker/src/photos_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
worker/src/worker/: api.py  auth.py  backend_client.py  clip_encoder.py  config.py  consumer.py  face_assign.py  face_detect.py  geocode.py  log.py  main.py  metadata.py  pipeline.py  queue.py  recluster.py  s3.py  thumbnail.py
(+444 files in other folders)
