[project]
name = "photos-worker"
version = "0.1.0"
description = "Python worker service for media processing, CLIP embeddings, and face recognition"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "bullmq>=2.0",
    "httpx>=0.27",
    "pillow>=11.0",
    "open-clip-torch>=2.26",
    "torch>=2.4",
    "insightface>=0.7",
    "onnxruntime>=1.19",
    "numpy>=1.26",
    "hdbscan>=0.8",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
]

[project.scripts]
worker = "worker.main:run"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["worker"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
